# octopOS

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.freshinstall  EC2_TEST_RUNBOOK.md  README.md  architecture_plan.md  architecture_supplement.md  pyproject.toml
data/config/: mcp_registry.json
deploy/: .env.example  Dockerfile  docker-compose.prod.yml
deploy/scripts/: deploy-ec2.sh  install-telegram-service.sh
deploy/systemd/: octopos-telegram.env.example  octopos-telegram.service.template
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  CONFIGURATION.md  DEPLOYMENT.md  README.md  browser_agent_integration.md
plans/: architecture_diagrams.md  implementation_roadmap.md  incomplete_implementations.md  nova_act_mission_integration.md  phase1_technical_spec.md  security_action_plan.md  security_audit_report.md  security_fix_implementation.md  testing_strategy_plan.md  tool_library_architecture.md
sandbox/: Dockerfile  docker-compose.yml  entrypoint.sh
sandbox/config/: limits.conf  security.conf
scripts/: test_fresh_install.sh
src/engine/: __init__.py  base_agent.py  dead_letter_queue.py  integration_hooks.py  message.py  orchestrator.py  scheduler.py  supervisor.py  workflow_integration.py
src/engine/memory/: __init__.py  fact_extractor.py  intent_finder.py  semantic_cache.py  semantic_memory.py  working_memory.py
src/engine/profiles/: __init__.py  persona.py
src/interfaces/: __init__.py  message_adapter.py
src/interfaces/cli/: commands.py  main.py  mcp_market.py
src/interfaces/slack/: __init__.py  bot.py  event_handler.py  message_adapter.py  runtime.py
src/interfaces/telegram/: __init__.py  bot.py  message_adapter.py  runtime.py  webhook_handler.py
src/interfaces/ui/: __init__.py  automation_engine.py  nova_act.py  screen_analysis.py
src/interfaces/voice/: __init__.py  audio_handler.py  nova_sonic.py  voice_session.py
src/interfaces/whatsapp/: __init__.py  bot.py  message_adapter.py  webhook_handler.py
src/primitives/: __init__.py  aws_operations.py  base_primitive.py  file_operations.py  tool_registry.py
src/primitives/cloud_aws/: __init__.py  bedrock_invoker.py  cloudwatch_inspector.py  (+2 more)
src/specialist/: __init__.py  browser_agent.py  coder_agent.py  manager_agent.py  self_healing_agent.py
src/tasks/: __init__.py  task_queue.py
src/utils/: aws_eventbridge.py  aws_sts.py  bedrock_guardrails.py  cloudwatch_logger.py  config.py  feature_flags.py  file_delivery.py  logger.py  rate_limiter.py  token_budget.py
src/workers/: __init__.py  base_worker.py  ephemeral_container.py  worker_pool.py
tests/: conftest.py  test_logger.py
tests/e2e/: test_cli_e2e.py  test_multi_agent_workflow.py  test_stress.py  test_task_execution.py  test_telegram_e2e.py
tests/fixtures/: mock_aws.py  mock_docker.py  sample_data.py
tests/integration/: test_memory_persistence.py
(+57 files in other folders)
