[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octopos"
version = "0.1.0"
description = "octopOS - Agentic Operating System with AWS Nova integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "octopOS Team"}
]
keywords = ["ai", "agent", "aws", "nova", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0.0,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "questionary>=2.0.0,<3.0.0",
    
    # AWS
    "boto3>=1.28.0,<2.0.0",
    "botocore>=1.31.0,<2.0.0",
    
    # Data & Vector Store
    "lancedb>=0.8.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-json-logger>=2.0.0,<3.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.22.0,<1.0.0",

    
    # Async
    "aiohttp>=3.8.0,<4.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    
    # Scheduling
    "APScheduler>=3.10.0,<4.0.0",
    "croniter>=1.4.0,<2.0.0",
    
    # Security
    "cryptography>=41.0.0,<43.0.0",

    # Web & Intelligence
    "httpx>=0.25.0,<1.0.0",
    "ddgs>=9.0.0,<10.0.0",
    "playwright>=1.40.0,<2.0.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0,<2.0.0",

    # Developer Tools
    "GitPython>=3.1.0,<4.0.0",
    "ast-decompiler>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
octo = "src.interfaces.cli.main:app"

[project.urls]
Homepage = "https://github.com/octopos/octopos"
Documentation = "https://docs.octopos.dev"
Repository = "https://github.com/octopos/octopos"
Issues = "https://github.com/octopos/octopos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=octopos --cov-report=term-missing"
